Alterações no footer
Foi adicionado a classe container aos footer para melhor responsividade.

--- a/Projeto PWC/contactos.html
+++ b/Projeto PWC/contactos.html
@@ -182,7 +182,7 @@
   <!--Footer-->
   <div class="bg-light pt-5">
     <div>
-      <div class="d-flex align-items-center justify-content-center">
+      <div class="d-flex align-items-center justify-content-center container">
         <img class="tamanho-logo-footer" src="assets/img/LogotipoPretoPolitécnico.png">
       </div>
       <!--Ancoras para outras paginas-->
