--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -33,7 +33,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button> 
+        </button>
         <div class="collapse navbar-collapse ms-auto" id="navbarNav">
           <ul class="navbar-nav align-items-center ms-auto">
             <li class="nav-item pe-3">
@@ -78,7 +78,7 @@
                 ruínas de Roma, cada imagem revela um lugar à espera de ser explorado.</p>
               <p class="pb-3">Quer seja para aventura, relaxamento ou descoberta, encontra o teu próximo destino
                 connosco.</p>
-              <a class="nav-link active" href="#" aria-disabled="true"><button type="button"
+              <a class="nav-link active" href="paises.html" aria-disabled="true"><button type="button"
                   class="btn btn-outline-secondary rounded-0 px-4 py-2">Explorar</button></a>
             </div>
           </div>
@@ -148,7 +148,9 @@
           experiências inesquecíveis. Deixa-nos ser o teu guia até lugares que inspiram e despertam o espírito de
           exploração. Em cada viagem, descobre novas perspetivas e tesouros escondidos à espera de serem revelados.
           Começa a tua aventura hoje e cria memórias que durarão para toda a vida.</p>
-        <button type="button" class="btn btn-light rounded-0 fw-semibold px-4">Explorar</button>
+        <a class="nav-link active" href="paises.html" aria-disabled="true">
+          <button type="button" class="btn btn-light rounded-0 fw-semibold px-4">Explorar</button>
+        </a>
       </div>
     </div>
   </div>
@@ -166,7 +168,9 @@
             <h2 class="card-title text-center">Paulo</h2>
             <p class="card-text text-center">Estudante</p>
             <div class="d-flex justify-content-center">
-              <button type="button" class="btn btn-outline-primary rounded-0 fw-semibold ">Mais informações ></button>
+              <a class="nav-link active" href="contactos.html" aria-disabled="true">
+                <button type="button" class="btn btn-outline-primary rounded-0 fw-semibold ">Mais informações ></button>
+              </a>
             </div>
           </div>
         </div>
@@ -181,7 +185,9 @@
             <h2 class="card-title text-center">Miguel</h2>
             <p class="card-text text-center">Estudante</p>
             <div class="d-flex justify-content-center">
-              <button type="button" class="btn btn-outline-primary rounded-0 fw-semibold ">Mais informações ></button>
+              <a class="nav-link active" href="contactos.html" aria-disabled="true">
+                <button type="button" class="btn btn-outline-primary rounded-0 fw-semibold ">Mais informações ></button>
+              </a>
             </div>
           </div>
         </div>
@@ -194,7 +200,9 @@
             <h2 class="card-title text-center">Francisco</h2>
             <p class="card-text text-center">Estudante</p>
             <div class="d-flex justify-content-center">
-              <button type="button" class="btn btn-outline-primary rounded-0 fw-semibold ">Mais informações ></button>
+              <a class="nav-link active" href="contactos.html" aria-disabled="true">
+                <button type="button" class="btn btn-outline-primary rounded-0 fw-semibold ">Mais informações ></button>
+              </a>
             </div>
           </div>
         </div>
@@ -204,7 +212,7 @@
   <!--Footer-->
   <div class="bg-light pt-5">
     <div>
-      <div class="d-flex align-items-center justify-content-center">
+      <div class="d-flex align-items-center justify-content-center container">
         <img class="tamanho-logo-footer" src="assets/img/LogotipoPretoPolitécnico.png">
       </div>
       <!--Ancoras para outras paginas-->
@@ -265,7 +273,7 @@
       </div>
     </div>
   </div>
-  
+
   <script src="assets/javascript/api_home.js"></script>
   <script src="assets/javascript/favoritar.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
