--- a/Projeto PWC/detalhes.html
+++ b/Projeto PWC/detalhes.html
@@ -82,7 +82,7 @@
   <!--Footer-->
   <div class="bg-light pt-5 position-fixed bottom-0 w-100">
     <div>
-      <div class="d-flex align-items-center justify-content-center">
+      <div class="d-flex align-items-center justify-content-center container">
         <img class="tamanho-logo-footer" src="assets/img/LogotipoPretoPolitécnico.png">
       </div>
       <!--Ancoras para outras paginas-->
