Adicionado favicon às varias páginas
Correção de uma erro na significativo na home page

--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <!--Favicon-->
+  <link rel="icon" href="assets/img/Favicon.png" type="image/png">
   <!--Controlo do tipo dos caracteres-->
   <meta charset="UTF-8">
   <!--Controlo da responsividade da página-->
@@ -100,7 +102,7 @@
               <p>Descobre a vibrante Grande Barreira de Coral, a famosa Ópera de Sydney e o vasto Outback.</p>
               <p class="pb-3">A Austrália oferece uma vida selvagem única, costas ensolaradas e paisagens
                 diversificadas.</p>
-              <a class="nav-link active" href="#" aria-disabled="true"><button type="button"
+              <a class="nav-link active" href="paises.html" aria-disabled="true"><button type="button"
                   class="btn btn-outline-light rounded-0 px-4 py-2">Explorar</button></a>
             </div>
           </div>
