--- a/Projeto PWC/paises.html
+++ b/Projeto PWC/paises.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <!--Favicon-->
+  <link rel="icon" href="assets/img/Favicon.png" type="image/png">
   <!--Controlo do tipo dos caracteres-->
   <meta charset="UTF-8">
   <!--Controlo da responsividade da página-->
