--- a/Projeto PWC/favoritos.html
+++ b/Projeto PWC/favoritos.html
@@ -97,7 +97,7 @@
       <!--Icones-->
       <div class="d-block mb-4 container">
         <div class="d-flex align-items-center justify-content-center ">
-          <div class="pe-5">
+          <div class="px-5">
             <a href="#" class="redes-sociais">
               <img src="assets/img/Linkedin.png" alt="Linkedin">
               <img src="assets/img/LinkedinAzul.png" alt="Linkedin">
